--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -75,7 +75,7 @@ $colors: (
 
 // Ionicons
 // --------------------------------------------------
-// The premium icon font for Ionic. For more info, please see:
+// The premium icon fonts for Ionic. For more info, please see:
 // http://ionicframework.com/docs/ionicons/
 
 @import "ionic.ionicons";
