--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,26 @@
 page-home {
-
+  .card-operations .button-inner>div
+  {
+    position: relative;
+    top: 1px;
+    right: 4px;
+  }
+  ion-card
+  {
+    box-shadow: none!important;
+    border-bottom: 1px solid #e5e5e5;
+  }
+  ion-col
+  {
+    text-align: center;
+  }
+  ion-card, ion-card ion-item
+  {
+    background: #f5f5f5!important;
+  }
+  ion-card
+  {
+    width: 100%!important;
+    margin: 10px auto!important;
+  }
 }
