--- a/src/pages/signup/signup.scss
+++ b/src/pages/signup/signup.scss
@@ -77,7 +77,7 @@ page-signup {
     margin-top: 30px;
     padding: 13px;
     border-radius: 20px;
-    background-color: #b7c5f9;
+    background-color: #cad5fb;
     color: #3c64f9;
   }
   ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
@@ -97,8 +97,25 @@ page-signup {
       top: 30%;
     }
   }
-  .margin-20
-  {
-    margin-bottom: 20px!important;
+  .margin-20 {
+    margin-bottom: 20px !important;
+  }
+  ion-segment {
+    width: 80%;
+    margin: auto;
+  }
+  ion-segment-button {
+    height: auto !important;
+    border: 1px solid #b7c5f9 !important;
+    ion-label {
+      margin: 3px 0 !important;
+      color: #fff;
+    }
+  }
+  .segment-activated {
+    background-color: #cad5fb !important;
+    ion-label {
+      color: #3c64f9 !important;
+    }
   }
 }
