--- a/src/pages/verification-code/verification-code.scss
+++ b/src/pages/verification-code/verification-code.scss
@@ -65,7 +65,7 @@ page-verification-code {
     margin-top: 30px;
     padding: 13px;
     border-radius: 20px;
-    background-color: #b7c5f9;
+    background-color: #cad5fb;
     color: #3c64f9;
   }
   ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
