--- a/src/pages/personal/personal.scss
+++ b/src/pages/personal/personal.scss
@@ -1,46 +1,40 @@
 page-personal {
-  .card-operations .button-inner>div
-  {
+  .card-operations .button-inner > div {
     position: relative;
     top: 1px;
     right: 4px;
   }
-  ion-card
-  {
-    box-shadow: none!important;
+  ion-card {
+    box-shadow: none !important;
     border-bottom: 1px solid #e5e5e5;
   }
-  ion-col
-  {
+  ion-col {
     text-align: center;
   }
-  ion-card, ion-card ion-item
-  {
-    background: #f5f5f5!important;
+  ion-card, ion-card ion-item {
+    background: #f5f5f5 !important;
   }
-  ion-card
-  {
-    width: 100%!important;
-    margin: 10px auto!important;
+  ion-card {
+    width: 100% !important;
+    margin: 10px auto !important;
   }
-  .personal-info
-  {
-    background: #fff!important;
-    margin-bottom: 50px!important;
-    padding-bottom: 20px!important;
+  .personal-info {
+    background: #fff !important;
+    margin-bottom: 50px !important;
+    padding-bottom: 20px !important;
   }
-  .personal-info .item
-  {
-    background: #fff!important;
+  .personal-info .item {
+    background: #fff !important;
   }
-  .avatar-wrapper img
-  {
-    width: 90px!important;
-    height: 90px!important;
+  .avatar-wrapper img {
+    width: 100px !important;
+    height: 100px !important;
   }
-  .personal-info .input-wrapper
-  {
+  .personal-info .input-wrapper {
     align-items: baseline;
+  }
+  .avatar-wrapper img{
+    top: -3px!important;
   }
   //.tabbar show-tabbar
   //{
