personal page, follow , unfollow

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -94,3 +94,7 @@ ion-header:after {
 .tab-button.has-icon .tab-button-icon{
   line-height: 1!important;
 }
+.tab-badge.badge
+{
+  background: #fb7272!important;
+}
