Ui improvment of home and mentors page

--- a/src/pages/search/search.scss
+++ b/src/pages/search/search.scss
@@ -11,4 +11,9 @@ page-search {
     left: auto!important;
     right: 16px;
   }
+  .searchbar-clear-icon
+  {
+    right: auto!important;
+    left: 10px!important;
+  }
 }
