--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -117,3 +117,11 @@ ion-header:after {
   direction: ltr!important;
   text-align: left!important;
 }
+.card .card-content p
+{
+  text-align: justify!important;
+}
+.infos .label p
+{
+  white-space: normal!important;
+}
